k8s-config-gke/backend-ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ws-service
  annotations:
    cloud.google.com/backend-config: '{"default": "websocket-backendconfig"}'
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      # port: 80
      port: 8081 # Service port
      targetPort: 8081 # Port in the container
  type: LoadBalancer
