k8s-config-gke/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api/generate
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081

          - path: /llm
            pathType: Prefix
            backend:
              service:
                name: llm-python-service
                port:
                  number: 9093

          - path: /kafka
            pathType: Prefix
            backend:
              service:
                name: kafka-service
                port:
                  number: 9092

          - path: /zookeeper
            pathType: Prefix
            backend:
              service:
                name: zookeeper
                port:
                  number: 2181
