k8s-config-gke/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600' # Adjust timeouts if needed
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    networking.gke.io/managed-certificates: my-managed-cert
spec:
  rules:
    - host: aiplay.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
